--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,5 +1,54 @@
-.navContainer{
+.navContainer {
     width: 100%;
+    height: 60px;
+    background-color: rgb(229, 58, 64);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navContainer img {
     height: 40px;
-    background-color: rgb(229,58,64);
+    width: auto;
+    animation: rotar 4s infinite linear;
+    margin-left: 20px;
+}
+
+.btnsContainer {
+    margin-right: 20px;
+    display: flex;
+    width: 23%;
+    justify-content: space-between;
+}
+
+.navBtnsContainer {
+    width: 170px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.btnNav {
+    outline: none;
+    background: none;
+    border: none;
+    color: white;
+    transition: transform 0.2s ease;
+}
+
+.btnNav:hover {
+    cursor: pointer;
+    border-bottom: 1px solid #ffffff;
+    transform: scaleX(1);
+
+
+}
+
+@keyframes rotar {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
 }
