--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,19 @@
 body {
   margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
+  /* background: linear-gradient(317deg, rgba(213, 213, 213, 1) 29%, rgba(255, 255, 255, 1) 82%); */
+  background-image: url('./utils/images/white.jpg');
+  background-repeat: no-repeat;
+  height: auto;
 }
 
 
-*{
+
+
+* {
   margin: 0;
   padding: 0;
-  font-family: 'Quicksand', sans-serif;;
+  font-family: 'Quicksand', sans-serif;
+  ;
 }
