--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -1,9 +1,9 @@
 .card-button {
-    background-color: rgb(255, 253, 122);
+    background-color: #365DA3;
     border: none;
     border-radius: 1rem;
     bottom: 0;
-    color: black;
+    color: white;
     cursor: pointer;
     font-size: 1rem;
     left: 50%;
@@ -42,7 +42,7 @@ backdrop-filter: blur(3px);
 }
 
 .cardContainer:hover {
-    border-color: rgb(255, 253, 122);
+    border-color: #365DA3;
     box-shadow: -6px 6px 32px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: -6px 6px 32px 0px rgba(0, 0, 0, 0.75);
     -webkit-box-shadow: -6px 6px 32px 0px rgba(0, 0, 0, 0.75);
@@ -69,6 +69,7 @@ backdrop-filter: blur(3px);
     position: relative;
     transition: 0.2s ease-in-out;
     z-index: 1;
+    width: 180px;
 }
 
 a {
