--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -17,7 +17,7 @@
 .btnsContainer {
     margin-right: 20px;
     display: flex;
-    width: 23%;
+    width: 35%;
     justify-content: space-between;
 }
 
@@ -43,3 +43,20 @@
 
 }
 
+.socialContainer {
+    display: flex;
+    width: 25%;
+    justify-content: space-around;
+}
+
+.socialIcon {
+    font-size: 1.3rem;
+    color: white;
+    transition: all 0.2s ease-in-out;
+}
+
+.socialIcon:hover {
+    scale: 130%;
+    cursor: pointer;
+    color: rgb(255, 253, 122);
+}
